<resources>
    <string name="app_name">Moderb</string>
    <string name="your_personal_fitness_journey_begins">Your Personal Fitness Journey \n Begins</string>
    <string name="welcome_to">Welcome To</string>
    <string name="already_a_user">Already a user ?</string>
    <string name="continue_with_existing_account">continue with existing account</string>
    <string name="start">Start</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tailored_workouts_and_nutrition_plans">Tailored Workouts and \n Nutrition Plans</string>
    <string name="description_tailored_workouts_and_nutrition_plans">Get ready for workouts and nutrition plans tailored just for you. Tell us your goals, preferences, and fitness level, and let our AI create a customized roadmap to success</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="real_time_guidance_and_progress_tracking">Real-Time Guidance and \n Progress Tracking</string>
    <string name="description_real_time_guidance_and_progress_tracking">Experience real-time guidance during workouts and track your progress effortlessly. Our app provides insights, charts, and motivation to keep you on the path to a healthier lifestyle.</string>
    <string name="welcome_to_your_fitness_revolution">Welcome to your fitness \n revolution</string>
    <string name="description_welcome_to_your_fitness_revolution">Meet your new workout companion – your smart personal trainer. Ready to guide you every step of the way. Let’s make every workout count!</string>
    <string name="get_started">Get Started</string>
...
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="unlock_a_personalized_fitness_experience">Unlock a Personalized Fitness Experience</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="what_s_your_height">What’s Your height?</string>
    <string name="what_s_your_weight">What’s Your Weight?</string>
    <string name="what_s_your_target_weight">What’s Your Target weight?</string>
    <string name="beginner">Beginner</string>
    <string name="beginnerDesc">first time user, have no or little experience .show me what to do and how to do it</string>
    <string name="intermediate">Intermediate</string>
...
    <string name="exercise_place">Where do you\n exercise ?</string>
    <string name="gym">Gym</string>
    <string name="home">Home</string>
    <string name="both">Both</string>
    <string name="what_equipment_do_you_have">What Equipment do\n you have available to\n you?\n</string>
    <string name="do_you_have_pain">Do you currently\n experience any pain or\n discomfort in your\n body</string>
    <string name="continue_">Continue</string>
    <string name="day_1">Day 1</string>
    <string name="full_body_workout">Full-body workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="exercises_6">Exercises \n 6</string>
    <string name="sets_20">sets \n 20</string>
    <string name="Duration_40_50_min">Duration \n 40–50 min</string>
...
