...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/neon_blue_edges"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
...
            android:textSize="14sp"
            tools:text="test" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/neon_blue_edges"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
...
